manifests/common/ingresses/ingress-grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: promstack-grafana
  namespace: ingress
spec:
  type: ExternalName
  externalName: promstack-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: ingress
spec:
  stripPrefix:
    prefixes:
      - "/grafana"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: ingress-grafana-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: promstack-grafana
                port:
                  number: 80
